--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=/home/gkrause/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3500833109.properties
+deploy.ant.properties.file=C:\\Users\\bianc\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-82318208.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/gkrause/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/home/gkrause/GlassFish_Server/glassfish
-j2ee.server.instance=[/home/gkrause/GlassFish_Server/glassfish:/home/gkrause/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/gkrause/GlassFish_Server
+j2ee.server.domain=C:/Users/bianc/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/bianc/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\bianc\\GlassFish_Server\\glassfish;C:\\Users\\bianc\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/bianc/GlassFish_Server
 selected.browser=Chrome.INTEGRATED
-user.properties.file=/home/gkrause/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\bianc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
