--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\2016122760198\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-2063367678.properties
+deploy.ant.properties.file=C:\\Users\\bianc\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-82318208.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/2016122760198/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/2016122760198/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\2016122760198\\GlassFish_Server\\glassfish;C:\\Users\\2016122760198\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/2016122760198/GlassFish_Server
+j2ee.server.domain=C:/Users/bianc/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/bianc/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\bianc\\GlassFish_Server\\glassfish;C:\\Users\\bianc\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/bianc/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\2016122760198\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\bianc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
